# ME454_2024

./: README.md
ME454/cpp_ws/HW4/cpp/: CMakeLists.txt  cart_pole_cpp_20200282.cpp
ME454/cpp_ws/HW4/install/: local_setup.sh  setup.sh
ME454/cpp_ws/HW4/log/: latest_build
ME454/cpp_ws/cpp_practice1/: CMakeCache.txt  Makefile  cmake_install.cmake  list4arr  list4arr_eval
ME454/cpp_ws/cpp_practice1/src/: listops.cpp
ME454/cpp_ws/final_project/: CMakeLists.txt
ME454/cpp_ws/final_project/src/: dspSimMain.cpp  dspSolver_20200282.cpp
ME454/cpp_ws/four_bar_linkage_cpp/: CMakeLists.txt
ME454/cpp_ws/four_bar_linkage_cpp/src/: four_bar_linkage_simulation_20200282.cpp
ME454/cpp_ws/hw2_20200282/mymat/include/: mymat.hpp
ME454/cpp_ws/hw2_20200282/mymat/src/: test.cpp
ME454/cpp_ws/hw2_20200282/simulation/src/: simulate.cpp
ME454/cpp_ws/install/: local_setup.sh  setup.sh
ME454/cpp_ws/log/: latest_build
ME454/cpp_ws/midterm_2024/: CMakeLists.txt
ME454/cpp_ws/midterm_2024/src/: sun_torque_generator_20200282.cpp
ME454/cpp_ws/midterm_2024_cpp/: CMakeLists.txt
ME454/cpp_ws/midterm_2024_cpp/src/: earth_precession_20200282.cpp
ME454/cpp_ws/midterm_2024_lib/: CMakeLists.txt
ME454/cpp_ws/midterm_2024_lib/src/: myQuaternion_20200282.cpp  test.cpp
ME454/log/: latest_build
ME454/ros2_ws/install/: local_setup.sh  setup.sh
ME454/ros2_ws/log/: latest_build
ME454/ros2_ws/src/bowling/launch/: launch.py
ME454/ros2_ws/src/cartpole/src/: pid_publisher_subscriber_node.cpp
ME454/ros2_ws/src/gauss_summation/: CMakeLists.txt  package.xml
(+45 files in other folders)
